--- a/gui/todo
+++ b/gui/todo
@@ -13,7 +13,7 @@
 
 [ ] Edit/Add WHAT Section
 [ ] Edit/Add WHO Section
-[ ] Edit/Delete Section
+[X] Edit/Delete Section
 
 [X] Window/New
 [X] Window/Close
